# ts-music-serial

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/workflows/: security.yml
src/: App.vue  collections.js  colorExtract.js  coverCache.js  equalizer.js  libraryStore.js  lyricsCache.js  main.js  smartPlaylists.js  sortTracks.js  sortTracks.test.js  store.js  useLibraryData.js  viewTransition.js  waveformCache.js
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  discord.rs  exclusive.rs  lib.rs  lyrics.rs  playlist_io.rs  thumbbar.rs
src/assets/: main.css
src/components/: CommandPalette.vue  CoverImage.vue  EqualizerPanel.vue  FullScreenPlayer.vue  LosslessBadge.vue  LyricContent.vue  LyricsPanel.vue  MiniPlayer.vue  PlayerControls.vue  PlaylistCover.vue  PlaylistCreateModal.vue  QueuePanel.vue  Shelf.vue  SmartCover.vue  SmartPlaylistModal.vue  SongList.vue  SongScroller.vue  TitleBar.vue  TsLogo.vue  Visualizer.vue  WaveformSeekbar.vue
src/components/settings/: Section.vue  SelectInt.vue  SliderInt.vue  ToggleInt.vue
src/router/: index.js
src/views/: AlbumDetail.vue  AlbumsView.vue  ArtistDetail.vue  ArtistsView.vue  CollectionDetail.vue  FavoritesView.vue  HomeView.vue  PlaylistDetail.vue  PlaylistsView.vue  SettingsView.vue  SmartPlaylistDetail.vue  SongsView.vue
