[package]
name = "ts-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ts_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10" #parallelism
walkdir = "2.5" #directory traversal
jwalk = "0.8"
lofty = "0.21" #audio metadata parsing
base64 = "0.22" #images encoding
image = "0.25" #cover art decoding/downscaling
rodio = { version = "0.21", features = ["symphonia-all"] } #native audio playback/decoding (all formats incl. FLAC)
souvlaki = "0.8.3" #OS media controls (Windows SMTC / media keys)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] } #lyrics HTTP (rustls = no OpenSSL on Windows)
notify = "6" #filesystem watching for library auto-update
ebur128 = "0.1" #EBU R128 loudness analysis for volume normalization (ReplayGain)
# NetEase eapi request signing (AES-128-ECB + MD5) to fetch word-by-word (yrc)
# and romanized (romalrc) lyrics, which its plain web API does not expose.
aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
md-5 = "0.10"
hex = "0.4"
# Discord Rich Presence (now-playing status). Pure-Rust IPC to the local Discord
# client; cross-platform.
discord-rich-presence = "1.1"

# Windows-only: native Taskbar thumbnail toolbar buttons (ITaskbarList3).
# Pinned to the same `windows` major already pulled in by tauri/tao/wry so the
# crate is shared (only a few extra feature modules compile).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# WASAPI exclusive-mode output (bit-perfect). cpal/rodio only do shared mode, so
# the exclusive engine talks to WASAPI directly through this crate.
wasapi = "0.23"

# Optimize dependencies even in debug/dev builds. Audio codecs (symphonia) are
# math-heavy and unusably slow when compiled unoptimized — that is what made
# `tauri dev` take ~30s to start a track (the whole song is decoded up front).
# Our own crate stays unoptimized so incremental rebuilds remain fast; only the
# (rarely recompiled) dependencies get full optimization.
[profile.dev.package."*"]
opt-level = 3

